DSL_FINAL_VERSION/ImageManipulationParser.py
# Generated from ImageManipulation.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ImageManipulationParser ( Parser ):

    grammarFileName = "ImageManipulation.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'open'", "'('", "')'", "'openFolder'", 
                     "'.'", "'flipX'", "'flipY'", "'saturation'", "'brightness'", 
                     "'contrast'", "'polynomial'", "'resize'", "','", "'crop'", 
                     "'rotate'", "'save'", "'def'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "NUMBER", "STRING", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS" ]

    RULE_prog = 0
    RULE_command = 1
    RULE_assignment = 2
    RULE_action = 3
    RULE_actionType = 4
    RULE_resizeCommand = 5
    RULE_cropCommand = 6
    RULE_rotateCommand = 7
    RULE_saveCommand = 8
    RULE_funcDef = 9
    RULE_funcCall = 10

    ruleNames =  [ "prog", "command", "assignment", "action", "actionType", 
                   "resizeCommand", "cropCommand", "rotateCommand", "saveCommand", 
                   "funcDef", "funcCall" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    ID=21
    NUMBER=22
    STRING=23
    LINE_COMMENT=24
    BLOCK_COMMENT=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ImageManipulationParser.CommandContext)
            else:
                return self.getTypedRuleContext(ImageManipulationParser.CommandContext,i)


        def funcDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ImageManipulationParser.FuncDefContext)
            else:
                return self.getTypedRuleContext(ImageManipulationParser.FuncDefContext,i)


        def funcCall(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ImageManipulationParser.FuncCallContext)
            else:
                return self.getTypedRuleContext(ImageManipulationParser.FuncCallContext,i)


        def getRuleIndex(self):
            return ImageManipulationParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = ImageManipulationParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 25
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 22
                    self.command()
                    pass

                elif la_ == 2:
                    self.state = 23
                    self.funcDef()
                    pass

                elif la_ == 3:
                    self.state = 24
                    self.funcCall()
                    pass


                self.state = 27 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==18 or _la==21):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(ImageManipulationParser.AssignmentContext,0)


        def action(self):
            return self.getTypedRuleContext(ImageManipulationParser.ActionContext,0)


        def saveCommand(self):
            return self.getTypedRuleContext(ImageManipulationParser.SaveCommandContext,0)


        def getRuleIndex(self):
            return ImageManipulationParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = ImageManipulationParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 32
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 29
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 30
                self.action()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 31
                self.saveCommand()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ImageManipulationParser.ID, 0)

        def STRING(self):
            return self.getToken(ImageManipulationParser.STRING, 0)

        def getRuleIndex(self):
            return ImageManipulationParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = ImageManipulationParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(ImageManipulationParser.ID)
            self.state = 35
            self.match(ImageManipulationParser.T__0)
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 36
                self.match(ImageManipulationParser.T__1)
                self.state = 37
                self.match(ImageManipulationParser.T__2)
                self.state = 38
                self.match(ImageManipulationParser.STRING)
                self.state = 39
                self.match(ImageManipulationParser.T__3)
                pass
            elif token in [5]:
                self.state = 40
                self.match(ImageManipulationParser.T__4)
                self.state = 41
                self.match(ImageManipulationParser.T__2)
                self.state = 42
                self.match(ImageManipulationParser.STRING)
                self.state = 43
                self.match(ImageManipulationParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ImageManipulationParser.ID, 0)

        def actionType(self):
            return self.getTypedRuleContext(ImageManipulationParser.ActionTypeContext,0)


        def getRuleIndex(self):
            return ImageManipulationParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)




    def action(self):

        localctx = ImageManipulationParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_action)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(ImageManipulationParser.ID)
            self.state = 47
            self.match(ImageManipulationParser.T__5)
            self.state = 48
            self.actionType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def resizeCommand(self):
            return self.getTypedRuleContext(ImageManipulationParser.ResizeCommandContext,0)


        def cropCommand(self):
            return self.getTypedRuleContext(ImageManipulationParser.CropCommandContext,0)


        def rotateCommand(self):
            return self.getTypedRuleContext(ImageManipulationParser.RotateCommandContext,0)


        def NUMBER(self):
            return self.getToken(ImageManipulationParser.NUMBER, 0)

        def getRuleIndex(self):
            return ImageManipulationParser.RULE_actionType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActionType" ):
                listener.enterActionType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActionType" ):
                listener.exitActionType(self)




    def actionType(self):

        localctx = ImageManipulationParser.ActionTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_actionType)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(ImageManipulationParser.T__6)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.match(ImageManipulationParser.T__7)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.resizeCommand()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.cropCommand()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 5)
                self.state = 54
                self.rotateCommand()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 6)
                self.state = 55
                self.match(ImageManipulationParser.T__8)
                self.state = 56
                self.match(ImageManipulationParser.T__2)
                self.state = 57
                self.match(ImageManipulationParser.NUMBER)
                self.state = 58
                self.match(ImageManipulationParser.T__3)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 7)
                self.state = 59
                self.match(ImageManipulationParser.T__9)
                self.state = 60
                self.match(ImageManipulationParser.T__2)
                self.state = 61
                self.match(ImageManipulationParser.NUMBER)
                self.state = 62
                self.match(ImageManipulationParser.T__3)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 8)
                self.state = 63
                self.match(ImageManipulationParser.T__10)
                self.state = 64
                self.match(ImageManipulationParser.T__2)
                self.state = 65
                self.match(ImageManipulationParser.NUMBER)
                self.state = 66
                self.match(ImageManipulationParser.T__3)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 9)
                self.state = 67
                self.match(ImageManipulationParser.T__11)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResizeCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(ImageManipulationParser.NUMBER)
            else:
                return self.getToken(ImageManipulationParser.NUMBER, i)

        def getRuleIndex(self):
            return ImageManipulationParser.RULE_resizeCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResizeCommand" ):
                listener.enterResizeCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResizeCommand" ):
                listener.exitResizeCommand(self)




    def resizeCommand(self):

        localctx = ImageManipulationParser.ResizeCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_resizeCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(ImageManipulationParser.T__12)
            self.state = 71
            self.match(ImageManipulationParser.T__2)
            self.state = 72
            self.match(ImageManipulationParser.NUMBER)
            self.state = 73
            self.match(ImageManipulationParser.T__13)
            self.state = 74
            self.match(ImageManipulationParser.NUMBER)
            self.state = 75
            self.match(ImageManipulationParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CropCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(ImageManipulationParser.NUMBER)
            else:
                return self.getToken(ImageManipulationParser.NUMBER, i)

        def getRuleIndex(self):
            return ImageManipulationParser.RULE_cropCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCropCommand" ):
                listener.enterCropCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCropCommand" ):
                listener.exitCropCommand(self)




    def cropCommand(self):

        localctx = ImageManipulationParser.CropCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cropCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(ImageManipulationParser.T__14)
            self.state = 78
            self.match(ImageManipulationParser.T__2)
            self.state = 79
            self.match(ImageManipulationParser.NUMBER)
            self.state = 80
            self.match(ImageManipulationParser.T__13)
            self.state = 81
            self.match(ImageManipulationParser.NUMBER)
            self.state = 82
            self.match(ImageManipulationParser.T__13)
            self.state = 83
            self.match(ImageManipulationParser.NUMBER)
            self.state = 84
            self.match(ImageManipulationParser.T__13)
            self.state = 85
            self.match(ImageManipulationParser.NUMBER)
            self.state = 86
            self.match(ImageManipulationParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RotateCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ImageManipulationParser.NUMBER, 0)

        def getRuleIndex(self):
            return ImageManipulationParser.RULE_rotateCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRotateCommand" ):
                listener.enterRotateCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRotateCommand" ):
                listener.exitRotateCommand(self)




    def rotateCommand(self):

        localctx = ImageManipulationParser.RotateCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_rotateCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(ImageManipulationParser.T__15)
            self.state = 89
            self.match(ImageManipulationParser.T__2)
            self.state = 90
            self.match(ImageManipulationParser.NUMBER)
            self.state = 91
            self.match(ImageManipulationParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaveCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ImageManipulationParser.ID, 0)

        def STRING(self):
            return self.getToken(ImageManipulationParser.STRING, 0)

        def getRuleIndex(self):
            return ImageManipulationParser.RULE_saveCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSaveCommand" ):
                listener.enterSaveCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSaveCommand" ):
                listener.exitSaveCommand(self)




    def saveCommand(self):

        localctx = ImageManipulationParser.SaveCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_saveCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ImageManipulationParser.ID)
            self.state = 94
            self.match(ImageManipulationParser.T__5)
            self.state = 95
            self.match(ImageManipulationParser.T__16)
            self.state = 96
            self.match(ImageManipulationParser.T__2)
            self.state = 97
            self.match(ImageManipulationParser.STRING)
            self.state = 98
            self.match(ImageManipulationParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ImageManipulationParser.ID)
            else:
                return self.getToken(ImageManipulationParser.ID, i)

        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ImageManipulationParser.ActionContext)
            else:
                return self.getTypedRuleContext(ImageManipulationParser.ActionContext,i)


        def saveCommand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ImageManipulationParser.SaveCommandContext)
            else:
                return self.getTypedRuleContext(ImageManipulationParser.SaveCommandContext,i)


        def getRuleIndex(self):
            return ImageManipulationParser.RULE_funcDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)




    def funcDef(self):

        localctx = ImageManipulationParser.FuncDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(ImageManipulationParser.T__17)
            self.state = 101
            self.match(ImageManipulationParser.ID)
            self.state = 102
            self.match(ImageManipulationParser.T__2)
            self.state = 103
            self.match(ImageManipulationParser.ID)
            self.state = 104
            self.match(ImageManipulationParser.T__3)
            self.state = 105
            self.match(ImageManipulationParser.T__18)
            self.state = 108 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 108
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 106
                    self.action()
                    pass

                elif la_ == 2:
                    self.state = 107
                    self.saveCommand()
                    pass


                self.state = 110 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==21):
                    break

            self.state = 112
            self.match(ImageManipulationParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ImageManipulationParser.ID, 0)

        def STRING(self):
            return self.getToken(ImageManipulationParser.STRING, 0)

        def getRuleIndex(self):
            return ImageManipulationParser.RULE_funcCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCall" ):
                listener.enterFuncCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCall" ):
                listener.exitFuncCall(self)




    def funcCall(self):

        localctx = ImageManipulationParser.FuncCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(ImageManipulationParser.ID)
            self.state = 115
            self.match(ImageManipulationParser.T__2)
            self.state = 116
            self.match(ImageManipulationParser.STRING)
            self.state = 117
            self.match(ImageManipulationParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





